manifests/opa-gatekeeper/k8s-required-labels-constraint-template.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
        listKind: K8sRequiredLabelsList
        plural: k8srequiredlabels
        singular: k8srequiredlabels
      validation:
        openAPIV3Schema:
          type: object
          properties:
            spec:
              type: object
              properties:
                match:
                  type: object
                parameters:
                  type: object
                  properties:
                    labels:
                      type: array
                      items:
                        type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
